style.css
/* Reset */
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

/* Global */
:root {
    font-size: 16px;
}

body {
    display: flex;
    flex-direction: row-reverse;
    align-items: center;
    gap: 4rem;
    background-color: #212121;
    color: #eeeeee;
    padding: 4rem;
    min-height: 100lvh;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}

.profile-section {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    gap: 1.5rem;
    flex: 1;
}

.profile-picture {
    width: 12rem;
    border-radius: 50%;
}

.profile-name {
    font-size: 2rem;
    font-weight: bold;
}

.profile-career {
    font-size: 1.5rem;
    font-weight: normal;
}

.social-links-container {
    display: flex;
    gap: 1rem;
}

.social-link {
    text-decoration: none;
}

.social-icon {
    width: 2rem;
    height: 3rem;
}

.social-icon:hover {
    transform: scale(1.25);
}

.certificate-link {
    text-decoration: none;
    color: #212121;
    background-color: darkorange;
    padding: 0.5rem 2rem;
    font-weight: bold;
    border-radius: 0.5rem;
}

.certificate-link:hover {
    background-color: orange;
}

.introduction-section {
    display: flex;
    flex-direction: column;
    gap: 2rem;
    flex: 2;
}

.introduction-title {
    font-size: 3rem;
}

strong {
    color: mediumseagreen;
}

.introduction-description {
    color: #d9d9d9;
    line-height: 2;
}

.project-link {
    text-decoration: none;
    color: inherit;
    border: 1px solid #eeeeee;
    padding: 0.5rem;
}

.project-link:hover {
    border-color: mediumseagreen;
    color: mediumseagreen;
}

/* Responsive */
@media screen and (max-width:1000px) {
    body {
        flex-direction: column;
    }
}

@media screen and (max-width:700px) {
    body {
        padding: 4rem 2rem;
    }

    .profile-picture {
        width: 10rem;
    }
}

@media screen and (max-width:450px) {
    body {
        padding: 4rem 1rem;
    }

    .profile-picture {
        width: 10rem;
    }
}

